@@ -73,6 +73,7 @@ class TestGlueCatalogTableOperations {
     mockClient = mock(GlueClient.class);
     ops = new GlueCatalogOperations();
     ops.glueClient = mockClient;
+    ops.warehouseLocation = "s3://test-bucket/warehouse";
   }
 
   // -------------------------------------------------------------------------
@@ -190,7 +191,7 @@ class TestGlueCatalogTableOperations {
             ident,
             columns,
             "my comment",
-            Map.of(GlueConstants.LOCATION, "s3://bucket/path"),
+            Map.of(GlueConstants.LOCATION, "s3://bucket/path", GlueConstants.FORMAT, "parquet"),
             Transforms.EMPTY_TRANSFORM,
             Distributions.NONE,
             SortOrders.NONE,
@@ -215,7 +216,7 @@ class TestGlueCatalogTableOperations {
                 ident,
                 new Column[0],
                 null,
-                Collections.emptyMap(),
+                Map.of(GlueConstants.FORMAT, "parquet"),
                 Transforms.EMPTY_TRANSFORM,
                 Distributions.NONE,
                 SortOrders.NONE,
@@ -251,8 +252,8 @@ class TestGlueCatalogTableOperations {
             HiveStorageConstants.TEXT_INPUT_FORMAT_CLASS,
             GlueConstants.OUTPUT_FORMAT,
             HiveStorageConstants.IGNORE_KEY_OUTPUT_FORMAT_CLASS,
-            GlueConstants.TABLE_TYPE,
-            "EXTERNAL_TABLE");
+            GlueConstants.SERDE_LIB,
+            HiveStorageConstants.LAZY_SIMPLE_SERDE_CLASS);
 
     ArgumentCaptor<CreateTableRequest> captor = ArgumentCaptor.forClass(CreateTableRequest.class);
 
@@ -271,7 +272,6 @@ class TestGlueCatalogTableOperations {
     assertEquals("EXTERNAL_TABLE", req.tableInput().tableType());
     assertEquals("s3://my-bucket/path", req.tableInput().storageDescriptor().location());
     assertFalse(req.tableInput().parameters().containsKey(GlueConstants.LOCATION));
-    assertFalse(req.tableInput().parameters().containsKey(GlueConstants.TABLE_TYPE));
   }
 
   // -------------------------------------------------------------------------
@@ -285,6 +285,7 @@ class TestGlueCatalogTableOperations {
         Table.builder()
             .name("old")
             .description("old comment")
+            .parameters(Map.of(GlueConstants.FORMAT, "parquet"))
             .storageDescriptor(StorageDescriptor.builder().build())
             .createTime(Instant.now())
             .build();
@@ -304,7 +305,7 @@ class TestGlueCatalogTableOperations {
     Table glueTable =
         Table.builder()
             .name("t")
-            .parameters(Map.of("existing", "v1"))
+            .parameters(Map.of("existing", "v1", GlueConstants.FORMAT, "parquet"))
             .storageDescriptor(StorageDescriptor.builder().build())
             .createTime(Instant.now())
             .build();
@@ -325,6 +326,7 @@ class TestGlueCatalogTableOperations {
     Table glueTable =
         Table.builder()
             .name("t")
+            .parameters(Map.of(GlueConstants.FORMAT, "parquet"))
             .storageDescriptor(
                 StorageDescriptor.builder()
                     .columns(
